<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:textColor="#ffffff"
        android:background="@drawable/mybutton"
        android:gravity="center"
        android:text="Know It All"
        android:shadowColor="@color/black_overlay"
        android:textSize="29sp" />

    <!--    <ScrollView-->
    <!--        android:id="@+id/scrollView2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:id="@+id/space0"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        //put an onclick

        <Button
            android:id="@+id/flashcardButton"
            android:layout_width="320dp"
            android:shadowColor="@color/black_overlay"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/mybutton"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="50dp"

            android:textColor="#ffffff"
            android:layout_marginRight="20dp"
            android:drawableEnd="@drawable/flashcard"
            android:drawableRight="@drawable/flashcard"
            android:gravity="center"
            android:text="@string/flashcards"
            android:textSize="34sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/flashcard2"
            android:layout_width="320dp"
            android:shadowColor="@color/black_overlay"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="20dp"
            android:background="#330066"
            android:gravity="center"
            android:text="@string/flashcardText"
            android:textSize="20sp" />

        <Space
            android:id="@+id/space1"
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/quizButton"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:shadowColor="@color/black_overlay"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/mybutton"
            android:drawableEnd="@drawable/quiz"
            android:drawableRight="@drawable/quiz"
            android:gravity="center"
            android:text="@string/quiz"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/quiz2"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:shadowColor="@color/black_overlay"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="50dp"
            android:textColor="#ffffff"
            android:layout_marginRight="20dp"
            android:background="#330066"
            android:gravity="center"
            android:text="@string/quizText"
            android:textSize="20sp" />

        <Space
            android:id="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/videoButton"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:shadowColor="@color/black_overlay"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/mybutton"
            android:drawableEnd="@drawable/video"
            android:drawableRight="@drawable/video"
            android:gravity="center"
            android:text="@string/videos"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/video2"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:shadowColor="@color/black_overlay"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="20dp"
            android:background="#330066"
            android:gravity="center"
            android:text="@string/videoText"
            android:textSize="20sp" />

        <Space
            android:id="@+id/space3"
            android:layout_height="25dp"
            android:layout_width="0dp" />

    </LinearLayout>
    <!--    </ScrollView>-->

    <!--    <Button-->
    <!--        android:id="@+id/homebutton"-->
    <!--        android:layout_width="140dp"-->
    <!--        android:layout_height="65dp"-->
    <!--        android:layout_gravity="end"-->
    <!--        android:onClick="..."-->
    <!--        android:text="@string/home"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/leaderboardbutton"-->
    <!--        android:layout_width="142dp"-->
    <!--        android:layout_height="65dp"-->
    <!--        android:onClick="..."-->
    <!--        android:text="@string/leaderboard"-->
    <!--        android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--        app:layout_constraintStart_toEndOf="@id/profilebutton"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/profilebutton"-->
    <!--        android:layout_width="130dp"-->
    <!--        android:layout_height="65dp"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:onClick="..."-->
    <!--        android:text="@string/profile"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent" />-->

</FrameLayout>